@startuml Decorator Pattern - ElementarClash

!define ABSTRACT_CLASS abstract class

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<Abstract>> LightYellow
    BorderColor<<Abstract>> DarkOrange
    BackgroundColor<<Concrete>> LightBlue
    BorderColor<<Concrete>> DarkBlue
    BackgroundColor<<Manager>> Wheat
    BorderColor<<Manager>> Brown
}

' ===== Abstract Decorator =====
ABSTRACT_CLASS UnitDecorator <<Abstract>> {
    + {abstract} getAttackBonus(unit: Unit): int
    + {abstract} getDefenseBonus(unit: Unit): int
    + {abstract} getMovementBonus(unit: Unit): int
    + {abstract} isExpired(): boolean
    + {abstract} tick(): void
    + {abstract} getDecoratorName(): String
    + {abstract} getDescription(): String
}

' ===== Concrete Decorator (exemplarisch) =====
class AttackBuffDecorator <<Concrete>> {
    - {static} BONUS: int = 2
    - {static} DURATION: int = 2
    - remainingRounds: int
    __
    + getAttackBonus(unit: Unit): int
    + isExpired(): boolean
    + tick(): void
    + getDescription(): String
}

' ===== Buff/Debuff Manager =====
class BuffDebuffManager <<Manager>> {
    - {static} RANDOM: Random
    - {static} BASE_CHANCE: double = 0.03
    - {static} INCREASE_PER_ROUND: double = 0.06
    - {static} MAX_CHANCE: double = 0.60
    - {static} BUFF_POOL: List<Supplier<UnitDecorator>>
    - {static} DEBUFF_POOL: List<Supplier<UnitDecorator>>
    __
    + tryApplyRandomEffect(game: Game, currentRound: int): void
    - calculateChance(currentRound: int): double
}

' ===== Component (decorated class) =====
ABSTRACT_CLASS Unit <<Abstract>> {
    - decorators: List<UnitDecorator>
    __
    + addDecorator(decorator: UnitDecorator): void
    + removeDecorator(decorator: UnitDecorator): void
    + removeDecoratorsOfType(clazz: Class): void
    + removeExpiredDecorators(): void
    + getDecorators(): List<UnitDecorator>
    __
    + getAttack(): int
    + getDefense(): int
    + getMovement(): int
}

' ===== Inheritance =====
UnitDecorator <|-- AttackBuffDecorator

' ===== Associations =====
Unit o-right-> "0..*" UnitDecorator : decorators
BuffDebuffManager ..> UnitDecorator : <<creates>>
BuffDebuffManager ..> Unit : <<modifies>>

@enduml
